--- a/src/sass/modules/_m-alert.scss
+++ b/src/sass/modules/_m-alert.scss
@@ -177,8 +177,10 @@ p.usa-alert-heading {
 }
 
 // icon fixes
-.va-alert-body {
-  div:first-child, p:first-child {
+.va-alert-body,
+.usa-alert-body {
+  div:first-child,
+  p:first-child {
     margin-top:.3em;
   }
 }
