feature/6082:refactor to css changes to base folder

--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -61,6 +61,4 @@
 
 // ----- VA GENERAL (MAIN FILE/OTHER) ---- //
 @import "base/va";
-
-// ----- USWDS OVERRIDE ----- //
-@import "overrides/uswds/focus"
+@import "base/focus";
