hotfix/7724: fix for radiobox issue with none component radioboxes (#118)

--- a/src/sass/modules/_m-form-elements.scss
+++ b/src/sass/modules/_m-form-elements.scss
@@ -1,10 +1,6 @@
 .form-radio-buttons {
   label {
     margin-top: 1em;
-    outline: none;
-    padding: 6px 12px;
-    display: inline-block;
-    margin: 0;
 
     // Make links in radio button labels clickable
     a {
@@ -12,9 +8,18 @@
     }
   }
 
-  input:focus {
-    &+label {
-      background: #fad980;
+  .errorable-radio-button {
+    label {
+      outline: none;
+      padding: 6px 12px;
+      display: inline-block;
+      margin: 0;
+    }
+
+    input:focus {
+      &+label {
+        background: #fad980;
+      }
     }
   }
 }
