--- a/src/sass/base/_b-variables.scss
+++ b/src/sass/base/_b-variables.scss
@@ -31,6 +31,8 @@ $site-max-width:      100rem; // Worksout to about 1000px. USWDS value is 1040px
 //===================================
 
 $color-base:                 #212121;
+$color-blue:                 #0071BB;
+$color-primary:              $color-blue;
 $color-primary-darker:       #003E73;
 $color-primary-darkest:      #112e51;
 $color-secondary-darkest:    #981b1e;
