--- a/src/sass/base/_b-mixins.scss
+++ b/src/sass/base/_b-mixins.scss
@@ -1,7 +1,7 @@
-//======================================= 
+//=======================================
 // Media query helper. Use to set max-width queries.
 // Use this sparingly. Please use @include media instead.
-//======================================= 
+//=======================================
 
 @mixin media-maxwidth($bp) {
   @media screen and (max-width: #{$bp}) {
@@ -9,16 +9,16 @@
   }
 }
 
-//======================================= 
+//=======================================
 // Heading style mixins
-//======================================= 
+//=======================================
 
 // These styles Were orginally pulled from the corresponding,
 // legacy h* elements, which is why there is no `h1` style
-// and why `h3` is currently larger than `h2`. 
-// See discussion in: 
+// and why `h3` is currently larger than `h2`.
+// See discussion in:
 //    https://github.com/department-of-veterans-affairs/vets-website/pull/5267#issuecomment-293024728
-// TODO(team, eventually): 
+// TODO(team, eventually):
 //  - Decide on heading style hierarchy and consistency (design).
 //  - Update markup accordingly
 //  - Update these mixins
@@ -88,3 +88,13 @@
   }
 }
 
+@mixin focus-gold-light-outline {
+  outline: 2px solid $color-gold-light;
+  outline-offset: 2px;
+}
+
+@mixin focus-gold-lighter-highlight {
+  background: $color-gold-lighter;
+  outline: 2px solid $color-gold-lighter;
+  outline-offset: 0;
+}
