feature/6082:Modify element focus style:add global styles to focus

--- a/src/sass/base/focus.scss
+++ b/src/sass/base/focus.scss
@@ -46,3 +46,8 @@ input[type="radio"]:focus {
 nav button:focus {
   outline-offset: 0;
 }
+
+[type="checkbox"]:focus + label::before {
+  color: $color-gold-light;
+  outline: 2px solid $color-gold-light;
+}
