--- a/src/components/navigation/Breadcrumbs/Breadcrumbs.njk
+++ b/src/components/navigation/Breadcrumbs/Breadcrumbs.njk
@@ -2,10 +2,15 @@ import React from 'react';
 import Breadcrumbs from './Breadcrumbs';
 
 export default function BreadcrumbsExample(props) {
+  const crumbs = [
+    <a href="#" key="1">Link 1</a>,
+    <a href="#" key="2">Link 2</a>,
+    <a href="#" key="3">Link 3</a>
+  ];
+
   return (
-    <Breadcrumbs
-      id={props.id}
-      includeSearch={props.includeSearch}
-      crumbs={props.crumbs}/>
+    <Breadcrumbs>
+      {crumbs}
+    </Breadcrumbs>
   );
 }
