--- a/src/sass/site/site.scss
+++ b/src/sass/site/site.scss
@@ -4,6 +4,7 @@ $font-path: "~uswds/src/fonts";
 $image-path: "~uswds/src/img";
 @import "../core";
 @import "../modules/m-alert";
+@import "../modules/m-breadcrumbs";
 @import "m-crisis-line";
 @import "../modules/m-table";
 @import "../modules/m-button";
