--- a/src/sass/site/site.scss
+++ b/src/sass/site/site.scss
@@ -26,3 +26,4 @@ $image-path: "~uswds/src/img";
 @import "../modules/va-tabs";
 @import "color-palette";
 @import "../icons";
+@import "../modules/m-megamenu";
