--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -14,6 +14,7 @@
 @import "~font-awesome/scss/variables";
 @import "~font-awesome/scss/core";
 @import "~font-awesome/scss/icons";
+@import "~font-awesome/scss/animated";
 @font-face {
   font-family: "FontAwesome";
   src: url("~font-awesome/fonts/fontawesome-webfont.woff2") format("woff2"),
