feature/10551:Build 'megamenu' components:refactor to use pure function components

--- a/src/components/navigation/MegaMenu/MegaMenu.njk
+++ b/src/components/navigation/MegaMenu/MegaMenu.njk
@@ -38,7 +38,7 @@ const data = [
             description: 'Add a description of the marketing content'
           },
           seeAllLink: {
-            text: 'Link to menu page',
+            text: 'Link to Section 1 Page',
             href: '#'
           }
         }
@@ -76,7 +76,7 @@ const data = [
             description: 'Add a description of the marketing content'
           },
           seeAllLink: {
-            text: 'Link to menu page',
+            text: 'Link to Section 2 Page',
             href: '#'
           }
         }
