--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -14,6 +14,14 @@
       width: 26rem;
       padding: 28px 0px 0px 28px;
       white-space: normal;
+
+      h3 {
+        color: $color-black;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-top: 4px;
+        padding: 0;
+      }
     }
 
     .vetnav-level1[aria-expanded="true"] {
@@ -37,7 +45,7 @@
       }
     }
 
-    .panel-1 {
+    .column-one {
       left: 20px;
 
       &.panel-white {
@@ -46,7 +54,7 @@
       }
     }
 
-    .panel-2 {
+    .column-two {
       border-left: none;
       left: 280px;
 
@@ -56,7 +64,7 @@
       }
     }
 
-    .panel-3 {
+    .column-three {
       border-left: none;
       color: $color-black;
       left: 540px;
@@ -87,7 +95,7 @@
     color: $color-white;
   }
 
-  .panel-main {
+  .main-column {
     left: -230px;
     background-color: $color-white;
   }
