--- a/src/components/navigation/Breadcrumbs/Breadcrumbs.njk
+++ b/src/components/navigation/Breadcrumbs/Breadcrumbs.njk
@@ -3,9 +3,9 @@ import Breadcrumbs from './Breadcrumbs';
 
 export default function BreadcrumbsExample(props) {
   const crumbs = [
-    <a href="#" key="1">Link 1</a>,
-    <a href="#" key="2">Link 2</a>,
-    <a href="#" key="3">Link 3</a>
+    <a href="#" key="1">Home</a>,
+    <a href="#" key="2">Level One</a>,
+    <a href="#" key="3">Level Two</a>
   ];
 
   return (
