--- a/src/sass/site/site.scss
+++ b/src/sass/site/site.scss
@@ -24,5 +24,6 @@ $image-path: "~uswds/src/img";
 @import "../modules/m-progress-bar";
 @import "../modules/va-pagination";
 @import "../modules/va-tabs";
+@import "../modules/m-process-list";
 @import "color-palette";
 @import "../icons";
