adding filter to limit number of links on mobile

--- a/src/components/navigation/MegaMenu/MegaMenu.njk
+++ b/src/components/navigation/MegaMenu/MegaMenu.njk
@@ -14,6 +14,22 @@ const data = [
               {
                 text: 'First link',
                 href: '#'
+              },
+              {
+                text: 'Second link',
+                href: '#'
+              },
+              {
+                text: 'Third link',
+                href: '#'
+              },
+              {
+                text: 'Fourth link',
+                href: '#'
+              },
+              {
+                text: 'Fifth link',
+                href: '#'
               }
             ]
           },
@@ -22,6 +38,22 @@ const data = [
             links: [
               {
                 text: 'First link',
+                href: '#'
+              },
+              {
+                text: 'Second link',
+                href: '#'
+              },
+              {
+                text: 'Third link',
+                href: '#'
+              },
+              {
+                text: 'Fourth link',
+                href: '#'
+              },
+              {
+                text: 'Fifth link',
                 href: '#'
               }
             ]
@@ -90,16 +122,48 @@ const data = [
         title: 'Main Dropdown Section Title',
         links: [
           {
-            text: 'First Link',
+            text: 'First link',
             href: '#'
           },
+          {
+            text: 'Second link',
+            href: '#'
+          },
+          {
+            text: 'Third link',
+            href: '#'
+          },
+          {
+            text: 'Fourth link',
+            href: '#'
+          },
+          {
+            text: 'Fifth link',
+            href: '#'
+          }
         ]
       },
       columnOne: {
         title: 'Column 1 Title',
         links: [
           {
-            text: 'Link 1',
+            text: 'First link',
+            href: '#'
+          },
+          {
+            text: 'Second link',
+            href: '#'
+          },
+          {
+            text: 'Third link',
+            href: '#'
+          },
+          {
+            text: 'Fourth link',
+            href: '#'
+          },
+          {
+            text: 'Fifth link',
             href: '#'
           }
         ]
@@ -108,9 +172,25 @@ const data = [
         title: 'Column 2 Title',
         links: [
           {
-            text: 'Link 1',
+            text: 'First link',
             href: '#'
           },
+          {
+            text: 'Second link',
+            href: '#'
+          },
+          {
+            text: 'Third link',
+            href: '#'
+          },
+          {
+            text: 'Fourth link',
+            href: '#'
+          },
+          {
+            text: 'Fifth link',
+            href: '#'
+          }
         ]
       },
       columnThree: {
