--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -97,7 +97,10 @@
 
   .main-column {
     left: -230px;
-    background-color: $color-white;
+
+    &.panel-white {
+      background-color: $color-white;
+    }
   }
 
   .panel-bottom-link {
@@ -117,14 +120,14 @@
       display: inline-block;
       padding-right: 25px;
     }
+  }
 
-    .panel-top-link {
-      display: none;
-    }
+  .panel-top-link {
+    display: none;
+  }
 
-    .back-button {
-      display: none;
-    }
+  .back-button {
+    display: none;
   }
 
   @media (max-width: 768px) {
@@ -134,6 +137,13 @@
 
     .vetnav-level2 {
       width: 100%;
+    }
+
+    .panel-top-link {
+      &:nth-of-type(1) {
+        display: block;
+        font-weight: bold;
+      }
     }
 
     .vetnav-panel--submenu:not([hidden]) {
@@ -146,22 +156,19 @@
       .panel-bottom-link {
         display: none;
       }
+    }
 
-      .panel-top-link {
-        display: block;
-      }
-
-      .back-button {
-        display: block;
-      }
+    .back-button {
+      display: block;
     }
 
     .mm-link-container-small {
+      background: $color-primary-darkest;
+      height: 100%;
       position: absolute;
       width: 100%;
-      height: 100%;
       top: 0;
-      background: #102f51;
+      z-index: 200;
     }
   }
 }
