--- a/src/components/SubwayMap/SubwayMap.njk
+++ b/src/components/SubwayMap/SubwayMap.njk
@@ -1,6 +1,6 @@
-<div className="process schemaform-process">
+<div class="process schemaform-process">
   <ol>
-    <li className="process-step list-one">
+    <li class="process-step list-one">
       <div><h5>Prepare</h5></div>
       <div><h6>To fill out this application, you’ll need your:</h6></div>
       <ul>
@@ -14,17 +14,17 @@
       <h6>Learn about educational programs</h6>
       <p>See what benefits you’ll get at the school you want to attend. <a href="/gi-bill-comparison-tool/">Use the GI Bill Comparison Tool</a>.</p>
     </li>
-    <li className="process-step list-two">
+    <li class="process-step list-two">
       <div><h5>Apply</h5></div>
       <p>Complete this education benefits form.</p>
       <p>After submitting the form, you’ll get a confirmation message. You can print this for your records.</p>
     </li>
-    <li className="process-step list-three">
+    <li class="process-step list-three">
       <div><h5>VA Review</h5></div>
       <p>We usually process claims within 30 days. We’ll let you know by mail if we need more information.</p>
       <p>We offer tools and counseling programs to help you make the most of your educational options. <a href="/education/tools-programs/">Learn about career counseling options.</a></p>
     </li>
-    <li className="process-step list-four">
+    <li class="process-step list-four">
       <div><h5>Decision</h5></div>
       <p>You’ll get a Certificate of Eligibility (COE), or award letter, in the mail if we've approved your application.</p>
       <p>If your application wasn’t approved, you’ll get a denial letter in the mail.</p>
