alertbox padding for close button

--- a/src/sass/modules/_m-alert.scss
+++ b/src/sass/modules/_m-alert.scss
@@ -74,6 +74,7 @@ p.usa-alert-heading {
     padding-top: 0;
   }
   padding-left: 2.2rem;
+  padding-right: 2.2rem;
 
   h3, h4, h5 {
     font-size: 1.7rem;
