--- a/src/components/navigation/Megamenu/Megamenu.njk
+++ b/src/components/navigation/Megamenu/Megamenu.njk
@@ -1,14 +1,164 @@
 import React from 'react';
-import Megamenu from './Megamenu';
+import MegaMenu from './MegaMenu';
 
-export default function MegamenuExample(props) {
-  return (
-    <Megamenu
-      onPageSelect={(e) => {}}
-      page={props.page}
-      pages={props.pages}
-      maxPageListLength={props.maxPageListLength}
-      showLastPage={props.showLastPage}
-      />
-  );
+const data = [
+  {
+    title: 'Nav Title 1',
+    menuSections: [
+      {
+        title: 'Section Title 1',
+        links: {
+          columnOne: {
+            title: 'Section 1 Column 1 Title',
+            links: [
+              {
+                text: 'First link',
+                href: '#'
+              }
+            ]
+          },
+          columnTwo: {
+            title: 'Section 1 Column 2 title',
+            links: [
+              {
+                text: 'First link',
+                href: '#'
+              }
+            ]
+          },
+          columnThree: {
+            img: {
+              src: 'http://via.placeholder.com/228x128',
+              alt: 'Place Holder Image'
+            },
+            link: {
+              text: 'Text for link',
+              href: '#'
+            },
+            description: 'Add a description of the marketing content'
+          },
+          seeAllLink: {
+            text: 'Link to Section 1 Page',
+            href: '#'
+          }
+        }
+      },
+      {
+        title: 'Section Title 2',
+        links: {
+          columnOne: {
+            title: 'Section 2 Column 1 Title',
+            links: [
+              {
+                text: 'First link',
+                href: '#'
+              }
+            ]
+          },
+          columnTwo: {
+            title: 'Section 2 Column 2 title',
+            links: [
+              {
+                text: 'First link',
+                href: '#'
+              }
+            ]
+          },
+          columnThree: {
+            img: {
+              src: 'http://via.placeholder.com/228x128',
+              alt: 'Place Holder Image'
+            },
+            link: {
+              text: 'Text for Marketing Link',
+              href: '#'
+            },
+            description: 'Add a description of the marketing content'
+          },
+          seeAllLink: {
+            text: 'Link to Section 2 Page',
+            href: '#'
+          }
+        }
+      }
+    ]
+  },
+  {
+    title: 'Nav Title 2',
+    menuSections: {
+      mainColumn: {
+        title: 'Main Dropdown Section Title',
+        links: [
+          {
+            text: 'First Link',
+            href: '#'
+          },
+        ]
+      },
+      columnOne: {
+        title: 'Column 1 Title',
+        links: [
+          {
+            text: 'Link 1',
+            href: '#'
+          }
+        ]
+      },
+      columnTwo: {
+        title: 'Column 2 Title',
+        links: [
+          {
+            text: 'Link 1',
+            href: '#'
+          },
+        ]
+      },
+      columnThree: {
+        img: {
+          src: 'http://via.placeholder.com/228x128',
+          alt: 'Place Holder Image'
+        },
+        link: {
+          text: 'Text for Marketing Link',
+          href: '#'
+        },
+        description: 'Add a description of the marketing content'
+      },
+    }
+  },
+  {
+    title: 'Nav Title 3 link only',
+    href: '#'
+  }
+];
+
+export default class MegaMenuExample extends React.Component {
+  constructor() {
+    super();
+  }
+
+  toggleDropDown(title) {
+    this.setState({
+      currentDropdown: title,
+    })
+  }
+
+  updateCurrentSection(title) {
+    this.setState({
+      currentSection: title,
+    })
+  }
+
+  render() {
+    return (
+      <div id="mega-menu">
+        <MegaMenu
+          {...this.state}
+          data={data}
+          toggleDropDown={(title) => this.toggleDropDown(title)}
+          updateCurrentSection={(title) => this.updateCurrentSection(title)}
+        ></MegaMenu>
+      </div>
+    );
+  }
 }
