change color to va-accent

--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -25,11 +25,11 @@
     }
 
     .vetnav-level1[aria-expanded="true"] {
-      border-top-color: $color-gold-light;
+      border-top-color: $color-va-accent;
     }
 
     .vetnav-level2[aria-expanded="true"] {
-      box-shadow: -3px 0 $color-gold-light;
+      box-shadow: -3px 0 $color-va-accent;
     }
 
     .vetnav-panel {
