styling changes min-height

--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -6,7 +6,7 @@
 
   @include media($medium-large-screen) {
     #vetnav-explore {
-        min-height: 565px;
+        height: 565px;
         width: 1028px;
     }
 
