add new loader image

--- a/src/sass/modules/_m-loading-indicator.scss
+++ b/src/sass/modules/_m-loading-indicator.scss
@@ -2,8 +2,8 @@
   text-align: center;
 
   .loading-indicator {
-    min-height: 10em;
-    background: url(/img/loading-state.gif) center center no-repeat;
+    min-height: 8em;
+    background: url(/img/loading-state.svg) center center no-repeat;
     background-size: contain;
     text-align: center;
     &:focus {
