Enable gold focus indicators on radio buttons (#153)
* Enable gold focus indicators on radio buttons

* Bump version

--- a/src/sass/base/_b-mixins.scss
+++ b/src/sass/base/_b-mixins.scss
@@ -88,9 +88,9 @@
   }
 }
 
-@mixin focus-gold-light-outline {
+@mixin focus-gold-light-outline($offset: 2) {
   outline: 2px solid $color-gold-light;
-  outline-offset: 2px;
+  outline-offset: #{$offset}px;
 }
 
 @mixin focus-gold-lighter-highlight {
