--- a/src/sass/base/_va.scss
+++ b/src/sass/base/_va.scss
@@ -1425,3 +1425,11 @@ p.info-message {
     color: #fff;
   }
 }
+
+.label-above-checkbox {
+  display: block;
+  margin: 3rem 0 1rem;
+  & + input + label {
+    margin-top: 0;
+  }
+}
