--- a/src/sass/base/focus.scss
+++ b/src/sass/base/focus.scss
@@ -11,7 +11,7 @@ select:focus {
   @include focus-gold-light-outline;
 }
 
-[role="button"], button:focus {
+[role="button"]:focus, button:focus {
   @include focus-gold-light-outline;
   position: relative;
   z-index: 3;
