Update required fields to match forms (#166)

--- a/src/components/form/controls/ErrorableMonthYear/ErrorableMonthYear.njk
+++ b/src/components/form/controls/ErrorableMonthYear/ErrorableMonthYear.njk
@@ -26,6 +26,7 @@ export default class ErrorableMonthYearExample extends React.Component {
       <ErrorableMonthYear
         required
         date={date}
+        label="Field label"
         name='ErrorableMonthYear'
         onValueChange={this.handleChange} />);
   }
