--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -262,4 +262,32 @@
       z-index: 200;
     }
   }
+
+  // IPad: fix for weirdness at 768 breakpoint on IPad
+  @media (min-width:768px) and (max-width:769px) {
+    .panel-bottom-link {
+      position: absolute;
+    }
+
+    .vetnav-panel--submenu:not([hidden]) {
+      position: absolute;
+      padding: 35px 0px 0px 28px;
+    }
+
+    .vetnav-panel {
+      height: 380px;
+    }
+
+    .mm-link-container {
+      width: 210px;
+
+      &[role="menuitem"] {
+        width: 243px;
+      }
+    }
+
+    .panel-bottom-link {
+      left: 26rem;
+    }
+  }
 }
