--- a/src/components/navigation/MegaMenu/MegaMenu.njk
+++ b/src/components/navigation/MegaMenu/MegaMenu.njk
@@ -220,7 +220,7 @@ export default class MegaMenuExample extends React.Component {
   }
 
   toggleDisplayHidden(hidden) {
-    if (window.innerWidth > 768) {
+    if (document.body.clientWidth > 768) {
       this.setState({
         display: {},
       });
