Reset background-color for accordion buttons on active

--- a/src/sass/modules/_m-button.scss
+++ b/src/sass/modules/_m-button.scss
@@ -36,6 +36,10 @@ button,
   }
 }
 
+.usa-accordion-button:active {
+  background-color: inherit;
+}
+
 .usa-button-secondary-exit {
   &::after {
     background-image: url(/img/icons/exit-icon-primary.png);
