adds z-index variables (#184)

--- a/src/sass/base/_b-variables.scss
+++ b/src/sass/base/_b-variables.scss
@@ -103,3 +103,12 @@ $green-white: #eff0e6;
 $olso-gray:   #849097;
 $light-blue:  #e1f3f8;
 $mm-gray:     #f1f1f1;
+
+//===================================
+// Z-index values
+//===================================
+$base-layer: 0;
+$low-layer: 100;
+$middle-layer: 200;
+$top-layer: 300;
+$modal-layer: 400;
