add fix for 400% zoom for mega menu

--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -72,6 +72,10 @@
     }
   }
 
+  .mm-links {
+    white-space: pre-wrap;
+  }
+
   @include media($medium-large-screen) {
     min-height: 51px;
 
