Use embedded svg (#188)
* update version

* use inline svg

* 1.8.4

--- a/src/sass/modules/_m-megamenu.scss
+++ b/src/sass/modules/_m-megamenu.scss
@@ -308,9 +308,11 @@
         display: inline-block;
         padding-right: 25px;
 
-        img {
+        svg {
+          height: 11px;
           width: 11px;
           margin-left: 5px;
+          vertical-align: middle;
         }
       }
     }
