--- a/src/sass/site/site.scss
+++ b/src/sass/site/site.scss
@@ -28,3 +28,4 @@ $image-path: "~uswds/src/img";
 @import "color-palette";
 @import "../icons";
 @import "../modules/m-megamenu";
+@import "../modules/m-hub-page-link-list";
