--- a/src/components/HubPageLinkList/HubPageLinkList.njk
+++ b/src/components/HubPageLinkList/HubPageLinkList.njk
@@ -1,18 +1,27 @@
-<h2 class="hub-page-link-list__title">
- {{ title }}
-</h2>
-<ul id="get" class="hub-page-link-list">
-{% for link in links %}
-  <li class="hub-page-link-list__item">
-    <a href="{{ link.url }}">
-      <span class="hub-page-link-list__header">
-       {{ link.label }}
-       <img class="all-link-arrow" src="/img/arrow-right-blue.svg" alt="right-arrow" /> 
-      </span>
-      <p class="hub-page-link-list__description">
-      {{ link.description }}
-      </p>
-    </a>
-  </li>
-  {% endfor %}
-</ul>
+{% for hublink in hublinks %}
+  <section class='usa-grid'>
+    <div class="va-h-ruled--stars"></div>
+  </section>
+  <h2 class="hub-page-link-list__title">
+   {{ hublink.title }}
+  </h2>
+  <ul id="{{ hublink.id }}" class="hub-page-link-list">
+  {% for link in hublink.links %}
+    <li class="hub-page-link-list__item">
+        <a href="{{ link.url }}" {% if link.external %} class="no-external-icon" {% endif %} {% if link.target %} target="{{ link.target }}" {% endif %} />
+        <span class="hub-page-link-list__header">
+         {{ link.label }}
+          {% if link.external %}
+            <i class="external-link-icon-black"></i>
+          {% else %}
+            <img class="all-link-arrow" src="/img/arrow-right-blue.svg" alt="right-arrow" /> 
+          {% endif %}
+        </span>
+        <p class="hub-page-link-list__description">
+        {{ link.description }}
+        </p>
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+{% endfor %}
