--- a/src/sass/modules/_m-hub-page-link-list.scss
+++ b/src/sass/modules/_m-hub-page-link-list.scss
@@ -32,3 +32,11 @@
     font-weight: bold;
   }
 }
+.external-link-icon-black {
+  background-image: url(/img/icons/exit-icon.png);
+  background-position: 100% 50%;
+  background-repeat: no-repeat;
+  background-size: 1em auto;
+  padding-right: 1.2em;
+  position: relative;
+}
