--- a/src/components/alerts/StaticAlert/StaticAlert.njk
+++ b/src/components/alerts/StaticAlert/StaticAlert.njk
@@ -1,20 +1,20 @@
   <div class="usa-alert usa-alert-success">
-    <div class="usa-alert-body va-alert-body">
-      <h3 class="va-alert-title">Success status</h3>
-      <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
-    </div>
-  </div>
-
-  <div class="usa-alert usa-alert-warning">
-    <div class="usa-alert-body va-alert-body">
-      <h3 class="va-alert-title">Warning status</h3>
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Success status</h3>
       <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
     </div>
   </div>
 
   <div class="usa-alert usa-alert-warning">
     <div class="usa-alert-body">
-      <h3 class="usa-alert-title">Expanding alert box<br><a id="crisis-expander-link">VA may be able to help</a>.</h3>
+      <h3 class="usa-alert-heading">Warning status</h3>
+      <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
+    </div>
+  </div>
+
+  <div class="usa-alert usa-alert-warning">
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Expanding alert box<br><a id="crisis-expander-link">VA may be able to help</a>.</h3>
       <div id="crisis-expander-content" class="expander-content expander-content-closed">
         <div class="expander-content-inner usa-alert-text">
           <p>We offer many programs and services to support you. Find the support you need:</p>
@@ -31,22 +31,29 @@
   </div>
 
   <div class="usa-alert usa-alert-error" role="alert">
-    <div class="usa-alert-body va-alert-body">
-      <h3 class="va-alert-title">Error status</h3>
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Error status</h3>
       <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
     </div>
   </div>
 
   <div class="usa-alert usa-alert-info">
-    <div class="usa-alert-body va-alert-body">
-      <h3 class="va-alert-title">Information status</h3>
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Information status</h3>
+      <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
+    </div>
+  </div>
+
+  <div class="usa-alert usa-alert-continue">
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Continue status</h3>
       <p>Lorem ipsum dolor sit amet, <a href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.</p>
     </div>
   </div>
 
   <div class="usa-alert usa-alert-info usa-alert-paragraph">
-    <div class="usa-alert-body va-alert-body">
-      <h3 class="va-alert-title">Information status - Paragraph Width</h3>
+    <div class="usa-alert-body">
+      <h3 class="usa-alert-heading">Information status - Paragraph Width</h3>
       <p>Multi line. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui atione voluptatem sequi nesciunt. Neque porro quisquam est, qui doloremipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
   </div>
