--- a/src/components/alerts/AlertBox/AlertBox.njk
+++ b/src/components/alerts/AlertBox/AlertBox.njk
@@ -36,6 +36,9 @@ export default function AlertBoxExample(props) {
         content={props.content}
         status={props.status}
         isVisible={false}/>
+      <AlertBox
+        content={<p className="usa-alert-text">Content without heading.</p>}
+        status={props.status}/>
     </div>
   );
 }
