--- a/src/sass/modules/_m-alert.scss
+++ b/src/sass/modules/_m-alert.scss
@@ -34,6 +34,14 @@
   }
 
   &-text {
+    margin-top: 2rem;
+
+    &:only-child {
+      margin: 0;
+      margin-top: 0.2rem;
+      padding: 0;
+    }
+
     p:first-child {
       margin-top: 0;
     }
@@ -43,8 +51,8 @@
     }
 
     // should override :first-child
-    usa-alert-heading + p:only-of-type {
-      margin-top: 1em;
+    .usa-alert-heading + p:only-of-type {
+      margin-top: 2rem;
     }
 
     ul {
@@ -98,7 +106,7 @@
   padding: 0;
   position: absolute;
   right: 2rem;
-  top: 1.75rem;
+  top: 2rem;
   width: auto;
 
   &:hover {
