--- a/src/components/alerts/AlertBox/AlertBox.njk
+++ b/src/components/alerts/AlertBox/AlertBox.njk
@@ -37,7 +37,7 @@ export default function AlertBoxExample(props) {
         status={props.status}
         isVisible={false}/>
       <AlertBox
-        content={<p className="usa-alert-text">Content without heading.</p>}
+        content={<p>Content without heading.</p>}
         status={props.status}/>
     </div>
   );
