Higher precedence rule for usa-alert-body. (#195)
* Higher precedence rule for usa-alert-body.

* 1.10.2

* Bumped version in module-readme.

* Removed unnecessary &.

--- a/src/sass/modules/_m-alert.scss
+++ b/src/sass/modules/_m-alert.scss
@@ -15,7 +15,8 @@
     position: static;
   }
 
-  &-body {
+  // &-body would not have had high enough precedence.
+  .usa-alert-body {
     display: table-cell;
     padding-left: 0;
     padding-right: 0;
