--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -63,3 +63,6 @@
 // ----- VA GENERAL (MAIN FILE/OTHER) ---- //
 @import "base/va";
 @import "base/focus";
+
+// ----- VA UTILITIES (UTILITIY OOCSS) ---- //
+@import "utilities/margins"
