display and visibility utilities. fix bug in responsive margins

--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -65,4 +65,6 @@
 @import "base/focus";
 
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
-@import "utilities/margins"
+@import "utilities/display";
+@import "utilities/margins";
+@import "utilities/visibility";
