create padding utility

--- a/src/sass/core.scss
+++ b/src/sass/core.scss
@@ -67,4 +67,5 @@
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
 @import "utilities/display";
 @import "utilities/margins";
+@import "utilities/padding";
 @import "utilities/visibility";
