--- a/src/sass/modules/_m-nav-sidebar.scss
+++ b/src/sass/modules/_m-nav-sidebar.scss
@@ -167,13 +167,13 @@
     }
 
     a.usa-current {
-      color: $color-black;
-      border-left: 4px solid $color-black;
-      padding-left: 8px;
+      color: $color-base;
+      border-left: 4px solid $color-base;
+      padding-left: 12px;
       margin-left: 16px;
       background-color: $mm-gray;
       text-decoration: none;
-      cursor: default;
+      cursor: auto;
 
       &.level-one {
         padding-left: 14px;
@@ -188,6 +188,11 @@
 
     .active-level {
       background-color: $mm-gray;
+
+      .usa-sidenav-sub_list {
+        margin-top: 2px;
+        margin-bottom: 2px;
+      }
     }
   }
 
